# agentd

./: .crush.json  .dockerignore  .editorconfig  .gitignore  .lsp.json  .tool-versions  CHANGELOG.md  CRUSH.md  Cargo.toml  Dockerfile  Makefile  Otterfile  Procfile  Procfile.ext  README.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  zensical.toml
.agentd/agents/: architect.yml  designer.yml  documenter.yml  planner.yml  reviewer.yml  worker.yml
.agentd/rooms/: announcements.yml  engineering.yml
.agentd/templates/: project-wide-plan.yml  user-interface-plan.yml
.agentd/workflows/: design-worker.yml  docs-worker.yml  issue-worker.yml  plan-worker.yml  pull-request-reviewer.yml
.cargo/: audit.toml  config.toml
.claude/: settings.json
.claude/agents/: cli-expert.md  orchestrator-expert.md  service-architect.md
.claude/hooks/: notify.sh
.github/workflows/: ci.yml  docker-claude-code.yml
.nemo/: CAPABILITIES.md  app.xml
.nemo/scripts/: handlers.rhai  transforms.rhai
.nemo/templates/: cards.xml  data.xml
baml_src/: README.md  cli.baml  clients.baml  generators.baml  hooks.baml  monitoring.baml  notifications.baml  questions.baml
contrib/: README.md
contrib/plists/: com.geoffjay.agentd-ask.plist  com.geoffjay.agentd-communicate.plist  com.geoffjay.agentd-hook.plist  com.geoffjay.agentd-memory.plist  com.geoffjay.agentd-monitor.plist  com.geoffjay.agentd-notify.plist  com.geoffjay.agentd-orchestrator.plist  com.geoffjay.agentd-wrap.plist
crates/ask/: Cargo.toml
crates/ask/src/: api.rs  client.rs  error.rs  lib.rs  main.rs  notification_client.rs  state.rs  tmux_check.rs  types.rs
crates/ask/tests/: api_test.rs
crates/baml/: Cargo.toml  README.md
crates/baml/examples/: categorize_notification.rs
crates/baml/src/: client.rs  error.rs  lib.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  lib.rs  main.rs  types.rs
crates/cli/src/commands/: apply.rs  ask.rs  communicate.rs  memory.rs  mod.rs  notify.rs  orchestrator.rs  wrap.rs
crates/cli/tests/: README.md  integration_test.rs
crates/common/: Cargo.toml
crates/common/src/: client.rs  error.rs  lib.rs  server.rs  storage.rs  types.rs
crates/communicate/: Cargo.toml
crates/communicate/src/: api.rs  client.rs  error.rs  lib.rs  main.rs  storage.rs  types.rs  websocket.rs
crates/communicate/src/entity/: message.rs  mod.rs  participant.rs  room.rs
crates/communicate/src/migration/: m20250319_000001_create_communicate_tables.rs  mod.rs
crates/communicate/tests/: communicate_integration.rs
crates/hook/: Cargo.toml
crates/hook/src/: api.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  shell.rs  state.rs  types.rs
crates/kanagawa/: Cargo.toml  build.rs
crates/kanagawa/examples/: css.rs  custom_flavor.rs  custom_theme.rs  ratatui.rs  serde.rs  simple.rs  term_grid.rs
crates/kanagawa/src/: colors.json  lib.rs  palette.json
crates/memory/: Cargo.toml
crates/memory/src/: api.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  storage.rs  types.rs
crates/memory/src/entity/: memory_entry.rs  mod.rs
crates/memory/src/migration/: m20260313_000001_create_memory_entries.rs  mod.rs
crates/memory/src/store/: embedding.rs  lance.rs  lance_embedding.rs  mod.rs  traits.rs
crates/memory/src/types/: memory.rs  memory_type.rs  mod.rs  requests.rs  visibility.rs
crates/memory/tests/: api_test.rs  lance_store_test.rs  visibility_test.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: api.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  metrics_collector.rs  state.rs  types.rs
crates/notify/: Cargo.toml  GPUI_REVIEW.md  README.md
crates/notify/docs/: GPUI_API_RESEARCH.md  GPUI_IMPLEMENTATION_GUIDE.md  README.md  RESEARCH_SUMMARY.md
crates/notify/examples/: gpui_test.rs
crates/notify/src/: api.rs  client.rs  lib.rs  main.rs  notification.rs  storage.rs  types.rs
crates/notify/src/entity/: mod.rs  notification.rs  notifications.rs  prelude.rs
crates/notify/src/migration/: m20250305_000001_create_notifications_table.rs  mod.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: api.rs  approvals.rs  client.rs  lib.rs  main.rs  manager.rs  message_bridge.rs  storage.rs  types.rs  websocket.rs
crates/orchestrator/src/entity/: agent.rs  agents.rs  dispatch.rs  dispatch_log.rs  mod.rs  prelude.rs  usage_session.rs  workflow.rs  workflows.rs
crates/orchestrator/src/migration/: m20250305_000001_create_tables.rs  m20250309_000002_add_usage_sessions.rs  m20250310_000003_rename_tmux_session.rs  m20250311_000004_add_network_policy.rs  m20250311_000006_add_additional_dirs.rs  m20250312_000005_add_docker_config.rs  m20260316_000007_rename_trigger_columns.rs  m20260319_000008_add_rooms_to_agents.rs  mod.rs
crates/orchestrator/src/scheduler/: api.rs  events.rs  github.rs  mod.rs  runner.rs  source.rs  storage.rs  strategy.rs  template.rs  types.rs  webhook.rs
crates/orchestrator/tests/: docker_lifecycle.rs  message_bridge_integration.rs  scheduler_integration.rs
crates/ui/: Cargo.toml  Info.plist
crates/ui/src/: assets.rs  main.rs
crates/ui/src/services/: connections.rs  mod.rs  notify_service.rs
crates/ui/src/theme/: theme.rs
crates/ui/src/workspace/: connections_panel.rs  footer_bar.rs  header_bar.rs  menu_bar.rs  mod.rs  notifications_panel.rs  settings_dialog.rs  terminal_element.rs  terminal_panel.rs  workspace.rs
crates/ui_terminal/: Cargo.toml
crates/ui_terminal/src/: lib.rs  terminal.rs  terminal_builder.rs
crates/wrap/: Cargo.toml
crates/wrap/src/: api.rs  backend.rs  client.rs  docker.rs  lib.rs  main.rs  tmux.rs  types.rs
crates/wrap/tests/: docker_integration.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
crates/xtask/src/platform/: linux.rs  macos.rs  mod.rs
docs/: agentd-ask-plan.md  agentd-notify-plan.md  agentd-plan.md  docker-backend.md  index.md  install.md  notes.md  storage.md
scripts/: launch-planner.sh  launch-worker.sh
ui/: .env.development  .env.example  agentd.pen  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
(+361 files in other folders)
