[workspace]
resolver = "2"
members = [
    "crates/ask",
    "crates/baml",
    "crates/cli",
    "crates/hook",
    "crates/kanagawa",
    "crates/monitor",
    "crates/notify",
    "crates/ollama",
    "crates/ui",
    "crates/ui_terminal",
    "crates/wrap",
    "crates/xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Geoff Johnson"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
