[workspace]
resolver = "2"
members = [
    "crates/ask",
    "crates/baml",
    "crates/cli",
    "crates/hook",
    "crates/monitor",
    "crates/notify",
    "crates/orchestrator",
    "crates/ollama",
    "crates/wrap",
    "crates/xtask",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Geoff Johnson"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
