[package]
name = "ask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agentd-ask"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tmux_interface = "0.3"
notify = { path = "../notify" }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
mockito = "1.2"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"
