[package]
name = "baml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = "2.0"

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
