[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cli"

[dependencies]
clap = { workspace = true }
clap_complete = "4.5"
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
prettytable-rs = "0.10"
tokio-tungstenite = { version = "0.26", features = ["connect", "handshake"] }
futures-util = "0.3"
serde_yaml = "0.9"

# Internal dependencies
notify = { path = "../notify" }
ask = { path = "../ask" }
wrap = { path = "../wrap" }
orchestrator = { path = "../orchestrator" }
monitor = { path = "../monitor" }
axum = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
