[package]
name = "agentd-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
directories = "6.0.0"
tempfile = "3.14"
