[package]
name = "hook"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agentd-hook"
path = "src/main.rs"

[lib]
name = "hook"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["serde", "v4"] }
reqwest = { workspace = true, features = ["json"] }
agentd-common = { path = "../common" }
baml = { path = "../baml", optional = true }

[features]
baml-analysis = ["baml"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mockito = "1.2"
