[package]
name = "kanagawa"
version = "0.1.0"
authors = ["Geoff Johnson <geoff.jay@gmail.com>"]
edition = "2021"
description = "🦀 Kanagawa theme for Rust."
documentation = "https://docs.rs/kanagawa"
homepage = "https://github.com/geoffjay/kanagawa"
repository = "https://github.com/geoffjay/kanagawa"
license = "MIT OR Apache-2.0"
keywords = ["kanagawa", "palette", "color", "colorscheme", "theme"]

[package.metadata.docs.rs]
features = ["ansi-term", "css-colors", "ratatui", "serde"]

[lints]
rust.missing_docs = "warn"
clippy.all = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"

[dependencies]
ansi_term = { version = "0.12", optional = true }
css-colors = { version = "1.0", optional = true }
ratatui = { version = "0.29", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
itertools = "0.14"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0"

[dev-dependencies]
crossterm = "0.29"
serde_json = "1.0"

[features]
ansi-term = ["dep:ansi_term"]
css-colors = ["dep:css-colors"]
ratatui = ["dep:ratatui"]
serde = ["dep:serde"]

[[example]]
name = "css"
required-features = ["css-colors"]

[[example]]
name = "custom_flavor"

[[example]]
name = "ratatui"
required-features = ["ratatui"]

[[example]]
name = "serde"
required-features = ["serde"]

[[example]]
name = "simple"

[[example]]
name = "term_grid"
required-features = ["ansi-term"]
