[package]
name = "memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "memory"
path = "src/lib.rs"

[[bin]]
name = "agentd-memory"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP API server
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }

# Database
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
async-trait = "0.1"

# Vector storage
# arrow-array and arrow-schema must match the version used by lancedb 0.16 (53.x)
# to avoid diamond-dependency type mismatches.
lancedb = "0.16"
arrow-array = "53"
arrow-schema = "53"

# HTTP client for embedding API calls
reqwest = { workspace = true, features = ["json"] }

# Async stream utilities (TryStreamExt for LanceDB result streams)
futures = "0.3"

# Additional utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { workspace = true }
directories = "6.0.0"
agentd-common = { path = "../common" }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
tower = { version = "0.5", features = ["util"] }
