[package]
name = "monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agentd-monitor"
path = "src/main.rs"

[lib]
name = "monitor"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["serde", "v4"] }
sysinfo = "0.33"
reqwest = { workspace = true, features = ["json"] }
agentd-common = { path = "../common" }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
baml = { path = "../baml", optional = true }

[features]
baml-integration = ["baml"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"
