[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agentd-orchestrator"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP API server + WebSocket
axum = { workspace = true, features = ["ws"] }
tower = "0.5"
tower-http = { workspace = true, features = ["cors"] }

# Database
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Async trait support
async-trait = "0.1"

# Additional utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { workspace = true }
directories = "6.0.0"
futures = "0.3"
agentd-common = { path = "../common" }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# HTTP client (for OrchestratorClient)
reqwest = { version = "0.12", features = ["json"] }

# Cron expression parsing
croner = { workspace = true }

# Tmux management (reuse from wrap crate)
wrap = { path = "../wrap" }

[dev-dependencies]
tempfile = "3.14"
