[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agentd-orchestrator"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP API server + WebSocket
axum = { workspace = true, features = ["ws"] }
tower = "0.5"
tower-http = { workspace = true, features = ["cors"] }

# Database
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Async trait support
async-trait = "0.1"

# Additional utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { workspace = true }
directories = "6.0.0"
futures = "0.3"
agentd-common = { path = "../common" }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# HTTP client (for OrchestratorClient)
# default-features = false avoids native-tls (macOS TLS init panics on non-main threads).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket client (for MessageBridge → communicate service)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# HMAC-SHA256 for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Cron expression parsing
croner = { workspace = true }

# Tmux management (reuse from wrap crate)
wrap = { path = "../wrap" }

# Inter-agent communication client
communicate = { path = "../communicate" }

[dev-dependencies]
tempfile = "3.14"
