[package]
name = "ui"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true

# UI dependencies
gpui = "0.2.2"
gpui-component = { version = "0.3.1", features = ["tree-sitter-languages"] }
tree-sitter = "0.25.6"
