[package]
name = "ui"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# Local dependencies
env_logger = "0.11"
log = "0.4"
rust-embed = "8.5"

# Internal crates
notify = { path = "../notify" }

# UI dependencies
gpui = "0.2.2"
gpui-component = { version = "0.3.1", features = ["tree-sitter-languages"] }
tree-sitter = "0.25.6"
