[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
colored = "2.1"
tokio = { version = "1", features = ["full"] }
memory = { path = "../memory" }
notify = { path = "../notify" }
orchestrator = { path = "../orchestrator" }
agentd-common = { path = "../common" }
